# plumamd

./: .gitignore  AGENTS.md  README.md  ejemplo.md  index.html  job-logs.txt  package-lock.json  package.json  prompt.json  site.tar  tsconfig.json  vite.config.ts
.github/workflows/: deploy-gh-pages-branch.yml  deploy-pages.yml  release.yml
assets/: index-Bq818pDI.js  index-D5ZjRHHQ.css  index-D8cMnZ6m.css  index-DbqaPF5v.js
docs/: assistant-context.md
scripts/: export-icons.sh
src/: editor.ts  export.ts  main.ts  md-katex.ts  pandoc.ts  preview.ts  storage.ts  style.css  theme.ts
src-tauri/: Cargo.toml  PlumaMD.desktop  copy_desktop.cjs  patch_deb.cjs  tauri.conf.json
src-tauri/desktop/: plumamd.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/utils/: env.ts
