[package]
name = "plumamd"
version = "0.1.0"
description = "Editor Markdown con Tauri"
authors = ["Juanjo"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "^1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "^1.6", features = [ "fs-exists", "fs-remove-file",
  "dialog-open",
  "dialog-save",
  "fs-read-file",
  "fs-write-file"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
